emoji en el footer

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </p>
     </form>
 
-    <footer>Copyright &copy 2021 - Jair Botello</footer>
+    <footer>Copyright &copy 2021 - Jair Botello &#x1F37E</footer>
     <script src="control.js"></script>
 </body>
 </html>
