required en los inputs

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <strong>Boleta: </strong> <input type="number" class="entrada" name="boleta" placeholder="2014600212" size="25" required>
         </p>
         <p>
-            <strong>Nombre: </strong><input type="text" class="entrada" name="nombre" placeholder="Jair Botello Contreras" size="25" >
+            <strong>Nombre: </strong><input type="text" class="entrada" name="nombre" placeholder="Jair Botello Contreras" size="25" required>
         </p>
         <p>
-            <strong>Grupo: </strong><input type="text" class="entrada" name="grupo" placeholder="3CV50" >
+            <strong>Grupo: </strong><input type="text" class="entrada" name="grupo" placeholder="3CV50" required>
         </p>
         <p>
-            <strong>Materia: </strong><input type="text" class="entrada" name="materia"  placeholder="Programación Web" size="30" >
+            <strong>Materia: </strong><input type="text" class="entrada" name="materia"  placeholder="Programación Web" size="30" required>
         </p>
         <p>
-            <strong>Fecha: </strong><input type="date" class="entrada" name="fecha" >
+            <strong>Fecha: </strong><input type="date" class="entrada" name="fecha" required>
         </p>
         <p>
             <input type="submit" class="boton" value="Enviar">
